# usm

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  blueprint.md  dev-plan.md  go.work  go.work.sum  prepare-release.bat  prepare-release.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
cli/usm/: .secrets.yml  .usm.team  README.md  audit.go  bob@example.com.private.key  comprehensive-test.sh  delete.go  get.go  go.mod  go.sum  init.go  list.go  main.go  profiles.go  recipients.go  rotate.go  set.go  share.go  sync.go  test-all.sh  test.sh
core/crypto/: README.md  crypto.go  crypto_test.go  encryption.go  encryption_test.go  go.mod  test-all.sh
core/spec/: Threat-Model.md  USM-Format-v1.md
docs/: README.md  developer-guide.md  docusaurus.config.js  index.html  package-lock.json  package.json  sidebars.js
docs/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json
docs/blog/: authors.yml
docs/docs/: ci-cd-recipes.md  developer-guide.md  enterprise-features.md  format-spec.md  index.md  migration-from-dotenv.md  quickstart.md  sdk-guides.md  security-model.md
docs/src/: README.md
sdks/python/: README.md  example.py  pyproject.toml  test.sh
sdks/python/src/usm/: __init__.py  usm.py
sdks/python/tests/: test_usm.py
sdks/python/tests/fixtures/: .secrets.yml
(+74 files in other folders)
